gcc/testsuite/rust/compile/unsafe_module.rs
unsafe mod toto {}
// { dg-error "module cannot be declared unsafe" "" { target *-*-* } .-1 }
